Fixed blank spacing issues to the right and bottom of the screen on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,11 @@ padding: 75px 100px;
     border-radius: 25px;
 }
 
+ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 li .nav-button {
     margin-left: 10%;
 }
@@ -198,4 +203,44 @@ footer {
   }
 
   
+}
+
+@media screen and (max-width: 1150px) {
+.nav-position ul {
+    padding: 25% 0px 0px 45%;
+    margin: 0px;
+}
+.mobile-logo-pos {
+    padding-left: 15%;
+}
+}
+
+@media screen and (max-width: 1150px) {
+    .mobile-banner {
+        max-height: 100%;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 799px) {
+#footer-details{
+    height: 200%;
+    padding: 10%;
+}
+}
+
+@media screen and (max-width: 767px) {
+.nav-position ul {
+    padding: 50% 0px 0px 50%;
+    margin: 0px;
+}
+}
+
+
+@media screen and (max-width: 767px) {
+.footer-padding {
+    margin: 0px;
+    padding: 0px;
+    height: 25%;
+}
 }
